13601 ksh shell lint misleading 13631 shell lint about variable expansion in arithmetic expressions is inscrutable Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>